angler: Use the group Wi-Fi Direct interface on bcm43xx
Change-Id: Ia6654dae388f70263ed7f4f78da17e1b61e840ce
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/init.angler.rc
+++ b/init.angler.rc
@@ -140,8 +140,8 @@ on boot
     # Wifi firmware reload path
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
 
-    # Wifi firmware reload path
-    chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
+    # Use the group Wi-Fi Direct interface on bcm43xx
+    setprop wifi.direct.interface p2p-dev-wlan0
 
     # WebView
     chmod 0755 /sys/kernel/debug/tracing
