--- a/init.angler.rc
+++ b/init.angler.rc
@@ -92,6 +92,7 @@ on boot
     write /dev/cpuset/system-background/cpus 0-2
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/camera-daemon/cpus 0-3
+    write /dev/cpuset/restricted/cpus 0-1
 
     # setup permissions for fb0 related nodes
     chown radio radio /sys/class/graphics/fb0/dynamic_dsitiming
