--- a/rootdir/etc/init.angler.rc
+++ b/rootdir/etc/init.angler.rc
@@ -180,7 +180,6 @@ on post-fs
 on post-fs-data
     # boot time fs tune
     write /sys/block/mmcblk0/queue/iostats 0
-    write /sys/block/mmcblk0/queue/scheduler cfq
     write /sys/block/mmcblk0/queue/iosched/slice_idle 0
     write /sys/block/mmcblk0/queue/read_ahead_kb 2048
     write /sys/block/mmcblk0/queue/nr_requests 256
@@ -307,14 +306,15 @@ on property:sys.boot_completed=1
      #allow CPUs to go in deeper idle state than C0
      write /sys/module/lpm_levels/parameters/sleep_disabled 0
      #end boot time fs tune
-     write /sys/block/mmcblk0/queue/scheduler noop
      write /sys/block/mmcblk0/queue/rq_affinity 0
      write /sys/block/mmcblk0/queue/read_ahead_kb 128
      write /sys/block/mmcblk0/queue/nr_requests 128
      write /sys/block/dm-0/queue/read_ahead_kb 128
      write /sys/block/dm-1/queue/read_ahead_kb 128
      write /sys/block/dm-2/queue/read_ahead_kb 128
-     write /sys/block/mmcblk0/queue/iostats 1
+
+    # Set CFQ I/O scheduler
+    setprop sys.io.scheduler "cfq"
 
     restart cameraserver
 
